add gallery section

--- a/src/index.html
+++ b/src/index.html
@@ -118,19 +118,25 @@
     </div>
 
     <div class="gallery">
-        <div class="gallery__block">
-            <img src="img/shop/1.jpg" alt="brooks">
-            <img src="img/shop/2.jpg" alt="brooks">
-            <img src="img/shop/3.jpg" alt="brooks" class="gallery__brooks">
+        <div class="gallery__images">
+            <div class="gallery__block">
+                <img src="img/shop/1.jpg" alt="brooks" class="gallery__brooks">
+                <img src="img/shop/2.jpg" alt="brooks" class="gallery__brooks">
+                <img src="img/shop/3.jpg" alt="brooks" class="gallery__bigbrooks">
+            </div>
+            <div class="gallery__block">
+                <img src="img/shop/4.jpg" alt="brooks" class="gallery__brooks">
+                <img src="img/shop/5.jpg" alt="brooks" class="gallery__brooks">
+            </div>
+            <div class="gallery__block">
+                <img src="img/shop/6.jpg" alt="brooks" class="gallery__bigbrooks">
+                <img src="img/shop/7.jpg" alt="brooks" class="gallery__brooks">
+                <img src="img/shop/8.jpg" alt="brooks" class="gallery__brooks">
+            </div>
         </div>
-        <div class="gallery__block gallery__block_w532">
-            <img src="img/shop/4.jpg" alt="brooks">
-            <img src="img/shop/5.jpg" alt="brooks">
-        </div>
-        <div class="gallery__block">
-            <img src="img/shop/6.jpg" alt="brooks">
-            <img src="img/shop/7.jpg" alt="brooks">
-            <img src="img/shop/8.jpg" alt="brooks">
+
+        <div class="gallery__button">
+            <button>DISCOVER THE SHOP</button>
         </div>
     </div>
 
