--- a/src/index.html
+++ b/src/index.html
@@ -140,6 +140,17 @@
         </div>
     </div>
 
+    <div class="messages">
+        <div class="messages__logo">
+            <img src="icons/logo.png" alt="logo">
+        </div>
+        <div class="title title_messages">Stay on the saddle!</div>
+        <form class="feed-form" action="#">
+            <input name="email" required placeholder="enter your email..." type="email">
+            <button class="button button_submit">go</button>
+        </form>
+    </div>
+
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
