add footer and other

--- a/src/index.html
+++ b/src/index.html
@@ -151,6 +151,20 @@
         </form>
     </div>
 
+    <footer class="footer">
+        <div class="generation__container">
+            <div class="footer__information">
+                <div class="title title_footer">AOD New York</div>
+                <div class="descr descr_footer">2250 Lexington Avenue<br>New York, NY 10035  - info@domain.com</div>
+            </div>
+            <div class="footer__icons">
+                <a href="#"><img src="icons/footer_icon/twit.png" alt="icon"></a>
+                <a href="#"><img src="icons/footer_icon/fac.png" alt="icon"></a>
+                <a href="#"><img src="icons/footer_icon/pint.png" alt="icon"></a>
+            </div>
+        </div>
+    </footer>
+
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
