scroll and other

--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,16 @@
 </head>
 <body>
     
-    <header>
+    <header id="up">
         <nav>
             <ul class="menu">
                 <li class="menu__item"><a href="#aboutus" class="menu__link">about us</a></li>
                 <li class="menu__item">.</li>
                 <li class="menu__item"><a href="#work" class="menu__link">work</a></li>
                 <li><a href="#" class="logo"><img src="icons/logo.png" alt="logo"></a></li>
-                <li class="menu__item"><a href="#" class="menu__link">shop</a></li>
+                <li class="menu__item"><a href="#shop" class="menu__link">shop</a></li>
                 <li class="menu__item">.</li>
-                <li class="menu__item"><a href="#" class="menu__link">contact</a></li>
+                <li class="menu__item"><a href="#contact" class="menu__link">contact</a></li>
             </ul>
         </nav>
     </header>
@@ -117,7 +117,7 @@
         </div>
     </div>
 
-    <div class="gallery">
+    <div id="shop" class="gallery">
         <div class="gallery__images">
             <div class="gallery__block">
                 <img src="img/shop/1.jpg" alt="brooks" class="gallery__brooks">
@@ -140,7 +140,7 @@
         </div>
     </div>
 
-    <div class="messages">
+    <div id="contact" class="messages">
         <div class="messages__logo">
             <img src="icons/logo.png" alt="logo">
         </div>
@@ -158,12 +158,16 @@
                 <div class="descr descr_footer">2250 Lexington Avenue<br>New York, NY 10035  - info@domain.com</div>
             </div>
             <div class="footer__icons">
-                <a href="#"><img src="icons/footer_icon/twit.png" alt="icon"></a>
-                <a href="#"><img src="icons/footer_icon/fac.png" alt="icon"></a>
-                <a href="#"><img src="icons/footer_icon/pint.png" alt="icon"></a>
+                <a href="#"><img src="icons/footer_icon/twitter.png" alt="icon"></a>
+                <a href="#"><img src="icons/footer_icon/facebook.png" alt="icon"></a>
+                <a href="#"><img src="icons/footer_icon/pinterest.png" alt="icon"></a>
             </div>
         </div>
     </footer>
+
+    <a href="#up" class="pageup">
+        <img src="icons/chevron-circle-up-solid.svg" alt="pageup">
+    </a>
 
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
